# toktik-backend

./: .env.sample  .gitignore  Dockerfile  manage.py  pyproject.toml  readme.md
.github/workflows/: release-backend.yaml
authentication/: apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_rename_isseen_notification_is_seen.py
toktik_backend/: asgi.py  settings.py  urls.py  wsgi.py
utils/: notification_util.py  redis_util.py  video_util.py
video/: apps.py  models.py  serializers.py  urls.py  views.py  workers.py
video/migrations/: 0001_initial.py  0002_alter_video_upload_timestamp.py  0003_remove_video_s3_url_converted_and_more.py  0004_alter_video_s3_key.py  0004_video_isprocessed_video_uploader_video_view.py  0005_merge_20231019_1637.py  0006_video_hasthumbnail_video_ischunked.py  0007_rename_isprocessed_video_isconverted.py  0008_video_status.py  0009_comment_like.py  0010_rename_isliked_like_is_liked.py  0011_rename_is_liked_like_isliked.py  0012_rename_isliked_like_is_liked.py
video/serializers/: comment_serializers.py  like_serializers.py  video_serializers.py
video/views/: comment_views.py  like_views.py  presigned_url_views.py  video_views.py  workers_views.py
