[tool.poetry]
name = "toktik-backend"
version = "0.1.0"
description = "Backend"
authors = [
    "Nawat Ngerncham <n.ngerncham@gmail.com>",
    "Thanawin Boonpojanasoontorn <pokepat27@gmail.com>",
]
packages = [{ include = "toktik_backend" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.6"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = { extras = ["crypto"], version = "^5.3.0" }
boto3 = "^1.28.63"
django-cors-headers = "^4.3.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
celery = "^5.3.4"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
